--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,6 +1,8 @@
-<% flash.each do |key, value| %>
-  <div class="<%= flash_class(key) %> fade in">
-    <a href="#" data-dismiss="alert" class="close">×</a>
-    <%= value %>
-  </div>
+<% [:notice, :success, :error, :alert].each do |key| %>
+  <% unless flash[key].blank? %>
+    <div class="<%= flash_class(key) %> fade in">
+      <a href="#" data-dismiss="alert" class="close">×</a>
+      <%= flash[key]%>
+    </div>
+  <% end %>
 <% end %>
