--- a/app/assets/stylesheets/app_bootstrap.css.scss
+++ b/app/assets/stylesheets/app_bootstrap.css.scss
@@ -1,9 +1,8 @@
 // import original bootstrap
 @import "twitter/bootstrap";
-body { padding-top: 60px; }
-@import "twitter/bootstrap-responsive";
+body { padding-top: 80px; }
 .navbar {
-  a.brand {
+  a.navbar-brand {
     color: #fff;
   }
 }
