--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,34 +12,34 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<header id="header">
-      <div class="navbar navbar-fixed-top navbar-inverse">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="/">App_Name</a>
-            <div class="nav-collapse">
-              <ul class="nav">
-              </ul>
-              <p class="navbar-text pull-right">
-                <% if user_signed_in? -%>
-                  <%= current_user.name %> 您好，欢迎回来 <%= link_to "退出", destroy_user_session_path, :method => :delete %>
-                <% else -%>
-                  请先<%= link_to "登录", new_user_session_path %>
-                <% end -%>
-              </p>
-            </div> <!-- .nav-collapse -->
-          </div> <!-- .container -->
-        </div> <!-- .nav-inner-->
-      </div> <!-- .topbar -->
-    </header>
+  <header id="header">
+    <nav class="navbar navbar-fixed-top navbar-inverse">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">App_Name</a>
+      </div> <!-- .navbar-header -->
+      <div class="collapse nav-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+        </ul>
+      </div> <!-- .nav-collapse -->
+      <p class="navbar-text navbar-right">
+        <% if user_signed_in? -%>
+        <%= current_user.name %> 您好，欢迎回来 <%= link_to "退出", destroy_user_session_path, :method => :delete %>
+        <% else -%>
+        请先<%= link_to "登录", new_user_session_path %>
+        <% end -%>
+      </p>
+    </nav>
+  </header>
 	<div id="content" role="main">
       <div class="container">
         <div class="row">
-          <div class="span12">
+          <div class="col-md-12">
             <%= render :partial => 'shared/flash_messages' %>
             <%= yield %>
           </div>
