--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,7 +1,7 @@
-<% [:notice, :success, :error, :alert].each do |key| %>
+<% [:info, :success, :danger, :warning, :alert].each do |key| %>
   <% unless flash[key].blank? %>
-    <div class="<%= flash_class(key) %> fade in">
-      <a href="#" data-dismiss="alert" class="close">×</a>
+    <div class="alert alert-<%= flash_class(key) %> alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
       <%= flash[key]%>
     </div>
   <% end %>
