--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,6 +1,6 @@
-<% [:info, :success, :danger, :warning, :alert].each do |key| %>
+<% [:info, :success, :danger, :warning, :alert, :notice].each do |key| %>
   <% unless flash[key].blank? %>
-    <div class="alert alert-<%= flash_class(key) %> alert-dismissable">
+    <div class="<%= flash_class(key) %> alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
       <%= flash[key]%>
     </div>
