--- a/app/views/shared/_flash_messages.html.slim
+++ b/app/views/shared/_flash_messages.html.slim
@@ -1,6 +1,6 @@
-- [:info, :success, :danger, :warning, :alert].each do |key| 
+- [:info, :success, :danger, :warning, :alert, :notice].each do |key| 
   - unless flash[key].blank?
-    div class="alert alert-#{flash_class(key)} alert-dismissable"
+    div class="#{flash_class(key)} alert-dismissable"
       button.close[type="button" data-dismiss="alert" aria-hidden="true"]
         |×
     = flash[key]
