--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,6 @@
  *= require_self
  *= require app_bootstrap
  *= require 'font-awesome'
- *= require jquery.ui.all
+ *= require jquery-ui
  *= require_tree .
  */
