modify to fit twbs bootstrap official gem

--- a/app/assets/stylesheets/app_bootstrap.css.scss
+++ b/app/assets/stylesheets/app_bootstrap.css.scss
@@ -1,5 +1,6 @@
 // import original bootstrap
-@import "twitter/bootstrap";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 body { padding-top: 80px; }
 .navbar {
   a.navbar-brand {
