--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,10 @@ html[lang="zh-CN"]
     meta[charset="utf-8"]
     meta[http-equiv="content-type" content="text/html; charset=utf-8"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"]
+    /百度防狼
+    meta[http-equiv="Cache-Control" content="no-siteapp"]
+    /360 強制 webkit
+    meta[name="renderer" content="webkit"]
     title
       | App_Name
       - if content_for?(:title) 
